--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,5 +1,13 @@
-log4j.rootLogger=INFO, console
-log4j.logger.example=DEBUG
+log4j.rootLogger=INFO, console, R
+
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%-5p %c: %m%n
+
+log4j.appender.R=org.apache.log4j.RollingFileAppender
+log4j.appender.R.File=./.log/log.log
+log4j.appender.R.MaxFileSize=1000KB
+log4j.appender.R.MaxBackupIndex=20
+log4j.appender.R.layout=org.apache.log4j.PatternLayout
+log4j.appender.R.layout.ConversionPattern=[%d][%p][%c] %m%n
+log4j.appender.R.append=true
