--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,9 +1,13 @@
-log4j.rootLogger=INFO, console, R
+log4j.rootLogger                          = FATAL, console
+log4j.logger.layzee.adapters.journal      = INFO, R
+log4j.additivity.layzee.adapters.journal  = false
 
+# console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%-5p %c: %m%n
 
+# journal
 log4j.appender.R=org.apache.log4j.RollingFileAppender
 log4j.appender.R.File=./.log/log.log
 log4j.appender.R.MaxFileSize=1000KB
