Adjusted file log format

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -13,5 +13,5 @@ log4j.appender.R.File=./.log/log.log
 log4j.appender.R.MaxFileSize=1000KB
 log4j.appender.R.MaxBackupIndex=20
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=[%d][%p][%c] %m%n
+log4j.appender.R.layout.ConversionPattern=%m%n
 log4j.appender.R.append=true
