Expand the logging around server startup so we can see what is taking the time

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger                          = FATAL, console
+log4j.rootLogger                          = INFO, console, L
 log4j.logger.layzee.adapters.journal      = INFO, R
 log4j.additivity.layzee.adapters.journal  = false
 
@@ -9,9 +9,18 @@ log4j.appender.console.layout.ConversionPattern=%-5p %c: %m%n
 
 # journal
 log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=./.log/log.log
+log4j.appender.R.File=./.log/journal.log
 log4j.appender.R.MaxFileSize=1000KB
 log4j.appender.R.MaxBackupIndex=20
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%m%n
 log4j.appender.R.append=true
+
+# log
+log4j.appender.L=org.apache.log4j.RollingFileAppender
+log4j.appender.L.File=./.log/journal.log
+log4j.appender.L.MaxFileSize=1000KB
+log4j.appender.L.MaxBackupIndex=20
+log4j.appender.L.layout=org.apache.log4j.PatternLayout
+log4j.appender.L.layout.ConversionPattern=%m%n
+log4j.appender.L.append=true
