--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -18,7 +18,7 @@ log4j.appender.R.append=true
 
 # log
 log4j.appender.L=org.apache.log4j.RollingFileAppender
-log4j.appender.L.File=./.log/journal.log
+log4j.appender.L.File=./.log/log.log
 log4j.appender.L.MaxFileSize=1000KB
 log4j.appender.L.MaxBackupIndex=20
 log4j.appender.L.layout=org.apache.log4j.PatternLayout
